Tutte le pagine dei kpi sistemate, rimane da sistemare le legende ed aggiungere i testi descrittivi